lisp interpreter, first working version : basic primitive and lambda

--- a/program/program.csproj
+++ b/program/program.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\csly\sly\sly.csproj" />
+    <ProjectReference Include="..\LispInterpreter\LispInterpreter.csproj" />
     <ProjectReference Include="..\lispparser\lispparser.csproj" />
   </ItemGroup>
 
