extract model in separate project

--- a/lispparser/lispparser.csproj
+++ b/lispparser/lispparser.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\csly\sly\sly.csproj" />
+    <ProjectReference Include="..\LispModel\LispModel.csproj" />
   </ItemGroup>
+
 
 </Project>
