--- a/program/program.csproj
+++ b/program/program.csproj
@@ -7,6 +7,13 @@
     <ProjectReference Include="..\lispparser\lispparser.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="lisp.lisp" />
+    <Content Include="lisp.lisp">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
