use sly nuget instead of project + some cleaning

--- a/LispModel/LispModel.csproj
+++ b/LispModel/LispModel.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\csly\sly\sly.csproj" />
+      <PackageReference Include="sly" Version="2.5.0" />
     </ItemGroup>
 
 </Project>
