--- a/CoreLisp/CoreLisp.csproj
+++ b/CoreLisp/CoreLisp.csproj
@@ -2,6 +2,9 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.0</TargetFramework>
+        <PackageVersion>0.1.0</PackageVersion>
+        <Description> .net core lisp interpreter</Description>
+        <version>0.1.0</version>
     </PropertyGroup>
 
     <ItemGroup>
