--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -29,5 +29,6 @@ jobs:
       uses: rohith/publish-nuget@v2.3.0
       with:
         PROJECT_FILE_PATH: CoreLisp/CoreLisp.csproj
+        VERSION_FILE_PATH: CoreLisp/version.txt
         NUGET_KEY: ${{secrets.NUGET_KEY}}
    
