--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -31,5 +31,9 @@ jobs:
         PROJECT_FILE_PATH: CoreLisp/CoreLisp.csproj
         VERSION_FILE_PATH: CoreLisp/version.txt
         NUGET_KEY: ${{secrets.NUGET_KEY}}
-    
+    - name: Upload artifact
+      uses: actions/upload-artifact@v1.0.0
+      with:
+        name: test
+        path: CoreLisp/version.txt
    
