--- a/program/program.csproj
+++ b/program/program.csproj
@@ -12,6 +12,9 @@
     <Content Include="lisp.lisp">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Update="assoc.lisp">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
