--- a/program/program.csproj
+++ b/program/program.csproj
@@ -8,6 +8,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="map.lisp">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Remove="lisp.lisp" />
     <Content Include="lisp.lisp">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
