--- a/CoreLisp/CoreLisp.csproj
+++ b/CoreLisp/CoreLisp.csproj
@@ -2,9 +2,11 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.0</TargetFramework>
-        <PackageVersion>1.0.3</PackageVersion>
+        <PackageVersion>1.0.4</PackageVersion>
         <Description> .net core lisp interpreter</Description>
-        <version>1.0.3</version>
+        <version>1.0.4</version> <PackageProjectUrl>https://github.com/b3b00/corelisp</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/b3b00/corelisp</RepositoryUrl>
+        <PackageLicenseUrl>https://github.com/b3b00/corelisp/blob/master/LICENSE</PackageLicenseUrl>
     </PropertyGroup>
 
     <ItemGroup>
