--- a/CoreLispTests/CoreLispTests.csproj
+++ b/CoreLispTests/CoreLispTests.csproj
@@ -6,11 +6,16 @@
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
+
     <ItemGroup>
         <PackageReference Include="nunit" Version="3.12.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
         <PackageReference Include="sly" Version="2.5.0.1" />
+        <PackageReference Include="coverlet.msbuild" Version="2.8.1">
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+          <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
