factorial unit test

--- a/CoreLispTests/CoreLispTests.csproj
+++ b/CoreLispTests/CoreLispTests.csproj
@@ -26,6 +26,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Content Include="factorial.lisp">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
       <Content Include="lisp.lisp">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
