--- a/lispparser/lispparser.csproj
+++ b/lispparser/lispparser.csproj
@@ -1,15 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\LispModel\LispModel.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="sly" Version="2.5.0.1" />
   </ItemGroup>
 
 
