--- a/CoreLisp/CoreLisp.csproj
+++ b/CoreLisp/CoreLisp.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>netcoreapp3.0</TargetFramework>
+  <PropertyGroup>
+    <TargetFramework>net6.0</TargetFramework>
         <PackageVersion>1.0.5</PackageVersion>
         <Description> .net core lisp interpreter</Description>
         <version>1.0.5</version> <PackageProjectUrl>https://github.com/b3b00/corelisp</PackageProjectUrl>
@@ -13,10 +13,6 @@
       <ProjectReference Include="..\LispInterpreter\LispInterpreter.csproj" />
       <ProjectReference Include="..\LispModel\LispModel.csproj" />
       <ProjectReference Include="..\lispparser\lispparser.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Include="sly" Version="2.5.0.1" />
     </ItemGroup>
 
 </Project>
