--- a/LispModel/LispModel.csproj
+++ b/LispModel/LispModel.csproj
@@ -1,12 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+  <PropertyGroup>
+    <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
 
-
     <ItemGroup>
-      <PackageReference Include="sly" Version="2.5.0.1" />
+      <PackageReference Include="sly" Version="2.8.0.3" />
     </ItemGroup>
 
 </Project>
