--- a/corelisprepl/corelisprepl.csproj
+++ b/corelisprepl/corelisprepl.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp3.0</TargetFramework>
+  <PropertyGroup>
+    <TargetFramework>net6.0</TargetFramework>
+        <OutputType>Exe</OutputType>        
     </PropertyGroup>
 
     <ItemGroup>
