--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -67,6 +67,10 @@ jobs:
       run: |
         echo 'new version is :'
         echo ${{steps.publish_nuget.outputs.VERSION}}
+        echo 'success ? :' 
+        echo ${{success()}}
+        echo 'matrix :'
+        echo ${{matrix.os}}                
     - name: Create Release
       if: ${{ success() && matrix.os == 'ubuntu-latest' && steps.publish_nuget.outputs.VERSION != ''  && steps.publish_nuget.outputs.VERSION != null }}
       id: create_release
